# socialinfrascorepy

./: README.md  pyproject.toml
docs/: .gitignore  _quarto.yml  _styles-custom.css  client-api.qmd  dashboard.qmd  get-started.qmd  index.qmd  objects.json  workflows.qmd
docs/.netlify/: state.json
docs/_site/: _styles-custom.css  client-api.html  dashboard.html  get-started.html  index.html  search.json  workflows.html
docs/_site/reference/: SIClient.html  client.html  delete_account.html  get_boundary_by_area_id.html  get_boundary_by_location_id.html  get_boundary_by_osm_id.html  get_boundary_by_place_name.html  get_remaining_queries.html  get_request_status.html  get_requests.html  get_scorecard.html  get_sites.html  get_subscription.html  get_theme_keywords.html  get_themes.html  get_usage.html  index.html  sign_in.html  (+4 more)
docs/reference/: SIClient.qmd  _sidebar.yml  client.qmd  delete_account.qmd  get_boundary_by_area_id.qmd  get_boundary_by_location_id.qmd  get_boundary_by_osm_id.qmd  get_boundary_by_place_name.qmd  get_remaining_queries.qmd  get_request_status.qmd  get_requests.qmd  get_scorecard.qmd  get_sites.qmd  get_subscription.qmd  get_theme_keywords.qmd  get_themes.qmd  get_usage.qmd  index.qmd  search_locations.qmd  send_password_reset.qmd  sign_in.qmd  sign_up.qmd  submit_request.qmd
inst/workflows/: testme.R  testme.sh
src/socialinfrascorepy/: __init__.py  _account.py  _auth.py  _client.py  _polygons.py  _requests.py  _scorecard.py  _sites.py  _themes.py  _utils.py
tests/: test_client_and_utils.py  test_mocked_http_flows.py  test_public_api.py
